<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/padding_common_15"
    android:paddingBottom="@dimen/padding_common_15"
    android:paddingLeft="@dimen/padding_common_25"
    android:paddingRight="@dimen/padding_common_25"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_corner_white">

        <RelativeLayout
            android:id="@+id/head_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:padding="@dimen/padding_common_5">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/choose_map"
                android:textSize="@dimen/text_size_l" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#ededed" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/map_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancel"
            android:layout_below="@+id/head_group" />

        <TextView
            android:gravity="center"
            android:layout_above="@+id/cancel"
            android:layout_below="@+id/head_group"
            android:textColor="@color/black"
            android:id="@+id/empty_view"
            android:visibility="gone"
            android:text="@string/map_list_is_empty"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#b70123"
            android:textSize="@dimen/text_size_l" />
    </RelativeLayout>
</RelativeLayout>